1.2.0-devel unreleased
======================

 * Removed five:traversable statements as they are no longer needed in Zope2.10.
   [hannosch]

 * Adjusted some tests due to changes in test setup.
   [hannosch]

1.1.0-devel unreleased
======================

 * Adjusted import locations of Archetypes.public to Archetypes.atapi for AT1.5.
   [hannosch]

 * Moved css rules for the photo album view inside Plone's public.css, instead
   of having them inline in the template. This way they can be overridden.
   This closes http://dev.plone.org/plone/ticket/4765.
   [hannosch]

 * Removed the unused locales folder. Translation files are part of the
   PloneTranslation product.
   [hannosch]

 * Uploading HTML via WebDAV now supports reading <title> tag to use 
   as the title of the new content item.
   http://dev.plone.org/plone/ticket/4877
   [rocky]

 * Semi-intelligent sniffing adding for figuring out the charset
   when using mx.Tidy.  This closes
   http://dev.plone.org/plone/ticket/5006
   [rocky]

 * Internal links didn't work for event url field. This closes
   http://dev.plone.org/plone/ticket/5004
   [hannosch]

 * Various fixes for the iCal/vCal export (thx Steve for the patch):
    - timezone problems
    - folding lines longer than 75 octests (per RFC)
    - escaping commas, colons and semi-colons (per RFC)
    - adding URL and CONTACT fields
   This closes http://dev.plone.org/plone/ticket/4512.
   [hannosch]

 * the EventType field in an event lists all relevant event types for
   an event, not just one. Modify the iCal output logic to properly
   produce comma-seperated event types. Fixes
   http://dev.plone.org/plone/ticket/4881
   [wichert]

 * Applied patch from Plone issue #5384 to do proper UTC conversion for iCal
   and vCal output. Added tests. Fixes #5384.
   [alecm]

 * Made use Zope 3 interfaces for constrain types and browser default. Depends
   on changes to CMFDynamicViewFTI trunk and Plone 2.5 branch.
   [optildue]
